--- a/OnlineTeacherApp-SPA/src/app/register/register.component.html
+++ b/OnlineTeacherApp-SPA/src/app/register/register.component.html
@@ -11,7 +11,7 @@
   </div>
 
   <div class="form-group text-center">
-    <button class="btn btn-success mr-2" type="submit">Register</button>
+    <button class="btn btn-success mr-2" type="button" (click)="register()">Register</button>
     <button class="btn btn-default" type="button" (click)="cancel()">Cancel</button>
   </div>
   
